<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>oprag.project</groupId>
	<artifactId>gestionControleDAcces</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>gestionControleDAcces</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.5.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.14.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.17.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>net.sf.jasperreports</groupId>-->
<!--			<artifactId>montserrat-fonts</artifactId>-->
<!--			<version>1.0</version>-->
<!--			<scope>system</scope>-->
<!--			<systemPath>${project.basedir}/libs/montserrat-jar.jar</systemPath>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>net.sf.jasperreports</groupId>-->
<!--			<artifactId>arialunicode-fonts</artifactId>-->
<!--			<version>1.0</version>-->
<!--			<scope>system</scope>-->
<!--			<systemPath>${project.basedir}/libs/arial-jar-unicode.jar</systemPath>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>net.sf.jasperreports</groupId>-->
<!--			<artifactId>dejavusans-fonts</artifactId>-->
<!--			<version>1.0</version>-->
<!--			<scope>system</scope>-->
<!--			<systemPath>${project.basedir}/libs/dejavu-sans-jar.jar</systemPath>-->
<!--		</dependency>-->


		<dependency>
			<groupId>oprag.project.gestionControleDAcces</groupId>
			<artifactId>montserrat-font</artifactId>
			<version>1.0</version>
		</dependency>


		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.codehaus.mojo</groupId>-->
<!--				<artifactId>exec-maven-plugin</artifactId>-->
<!--				<version>3.1.0</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>compile-reports</id>-->
<!--						<phase>generate-resources</phase>-->
<!--						<goals>-->
<!--							<goal>java</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<mainClass>net.sf.jasperreports.engine.JasperCompileManager</mainClass>-->
<!--							<arguments>-->
<!--								<argument>src/main/resources/carteInspectionRecto.jrxml</argument>-->
<!--								<argument>src/main/resources/carteInspectionVerso.jrxml</argument>-->
<!--								<argument>src/main/resources/cardbook.jrxml</argument>-->
<!--							</arguments>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->

		</plugins>
	</build>

</project>
